--- a/Deployment.yaml
+++ b/Deployment.yaml
@@ -1,5 +1,5 @@
-apiVersion: v1
-kind: DeploymentConfig
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: {{APP_NAME}}
   namespace: {{NAME_SPACE}}
